# Bakery-System

./: .gitignore  Dockerfile  README.md  ToDo.md  docker-compose-production.yml  docker-compose-test.yml  migration-sql-to-postgres.py  package-lock.json  requirements.txt  schema.sql  startup.sh
.github/workflows/: deploy.yml
app/: entrypoint-enviromment.sh
app/src/: app.py
app/src/.streamlit/: secrets.toml.example
app/src/controllers/: attendance_controller.py  caixa_controller.py  stock_controller.py  user_controller.py
app/src/database/: path.py
app/src/models/: attendance.py  balance.py  stock.py  user.py
app/src/sql/: sql_reader.py
app/src/utils/: authentication.py  correctperiods.py  formatting.py  logger.py  logs.py  sendmail.py  validation.py
app/src/views/: attendance_view.py  caixa_view.py  stock_view.py  user_view.py
data/: data.db.example
env/: aws.env.example
features/: add_column_initial_price.sql  add_column_period.sql  create_attendance_test_table.sql  keep_products_history.sql
migration_fast_api/: pyproject.toml
refactoring/: docker-compose-dev.yml  docker-compose-postgres.yml  docker-compose-prod.yml  fastapi.Dockerfile  postgres.Dockerfile  requirements.txt
refactoring/app/backend/: pyproject.toml
refactoring/app/backend/src/: main.py
refactoring/app/backend/src/models/: attendance.py  users.py
refactoring/app/backend/src/routers/: attendance.py  users.py
refactoring/app/backend/src/services/: database.py
refactoring/app/frontend/: server.js  todo.md
refactoring/app/later/: attendance.js
refactoring/backend/: pyproject.toml
refactoring/backend/app/controllers/: users.py
refactoring/scripts/: pg_startup.sql
scripts/: backup.sh
(+59 files in other folders)
