[tool.poetry]
name = "my-fastapi-app"
version = "0.1.0"
description = "Fast API migration"
authors = ["oseliocandido@outlook.com"]
readme = "README.md"
package-mode = false
packages = [{include = "my_fastapi_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
