[project]
name = "backend-bakery-fastapi-and-pgclient"
version = "0.1.0"
description = "I will put something later"
authors = [
    {name = "oselio",email = "oseliocandido@outlook.com"}
]
readme = "README.md"
requires-python = "3.11.3"
dependencies = [
    "fastapi == 0.115.10",
    "psycopg[binary,pool] == 3.2.5",
    "uvicorn == 0.34.0"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"

[build-system]
requires = ["poetry-core==2.0.0"]
build-backend = "poetry.core.masonry.api"
